--- a/html/signup/signup.html
+++ b/html/signup/signup.html
@@ -45,7 +45,7 @@
         </tr>
 
         <tr>
-    	  <td class="label --grey-txt">* optional</td>
+    	  <td class="label --grey-text">* optional</td>
     	  <td><input type="submit" ></td>
           <td></td>
         </tr>
